FC - 590 Certification date selector overlap fix

--- a/web/css/fc_styles.css
+++ b/web/css/fc_styles.css
@@ -2241,3 +2241,7 @@ li:last-child.eightStepWidth {
     /*overflow: hidden;*/
     /*padding: 0;*/ /* reset style coming from bootstrap used only in this stylesheet */
 }
+
+.ui-datepicker {
+	z-index: 10!important;
+}
